--- a/TestSpectral.ipynb
+++ b/TestSpectral.ipynb
@@ -414,7 +414,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nAsk professor\\n1. about complexity clustering algos, hierarchical clustering/spectral clustering/kmeans/divisive\\n2. time processing\\n3. the kmeans algorithm could be modified to generate more than one random mean for each cluster,\\nallowing it to run in multiple threads at the same time?\\n4. could or couldn\\'t initialize graph like a \"class\"\\n5. Closed neighborhood similarity or Dijsktra\\n'"
+       "'\\nQuestion\\n1. about complexity clustering algos, hierarchical clustering/spectral clustering/kmeans/divisive\\n2. time processing\\n3. the kmeans algorithm could be modified to generate more than one random mean for each cluster,\\nallowing it to run in multiple threads at the same time?\\n4. could or couldn\\'t initialize graph like a \"class\"\\n5. Closed neighborhood similarity or Dijsktra\\n'"
       ]
      },
      "execution_count": 134,
